# s4db

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml
s4db/: _format.py  _index.py  _storage.py  compaction.py  db.py
tests/: test_s4db.py
