[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "s4db"
version = "0.2.0"
description = "A lightweight key-value database backed by S3"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.26",
    "python-snappy>=0.6",
]

[project.optional-dependencies]
dev = ["pytest", "moto[s3]>=4.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["s4db*"]
